[workspace]
resolver = "2"
members = [
    "mountix-adapter",
    "mountix-app",
    "mountix-driver",
    "mountix-kernel"
]

[workspace.package]
name = "mountix"
version = "1.2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.2.3"
num = "0.4.3"
axum = "0.8.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
regex = "1.11.1"
tokio-test = "0.4.4"
mockall = "0.13.0"
hyper = "1.6.0"
serde_json = "1.0.140"
