[package]
name = "mountix-adapter"
version = "1.2.0"
edition = "2021"

[dependencies]
mountix-kernel = { path = "../mountix-kernel" }
anyhow = "1.0.98"
async-trait = "0.1.88"
dotenvy = "0.15.7"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
mongodb = "3.2.3"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.0"
