[package]
name = "mountix-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
mountix-kernel = { path = "../mountix-kernel" }
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
mongodb = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
