[package]
name = "mountix-app"
version.workspace = true
edition.workspace = true

[dependencies]
mountix-kernel = { path = "../mountix-kernel" }
mountix-adapter = { path = "../mountix-adapter" }
anyhow = { workspace = true }
tokio = { workspace = true }
num = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
