[package]
name = "mountix-driver"
version = "1.2.0"
edition = "2021"

[dependencies]
mountix-kernel = { path = "../mountix-kernel" }
mountix-app = { path = "../mountix-app" }
mountix-adapter = { path = "../mountix-adapter" }
axum = "0.8.4"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
