[package]
name = "mountix-driver"
version.workspace = true
edition.workspace = true

[dependencies]
mountix-kernel = { path = "../mountix-kernel" }
mountix-app = { path = "../mountix-app" }
mountix-adapter = { path = "../mountix-adapter" }
axum = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
serde_json = { workspace = true }
